Issue-1: a.  Remove all libraries that are already part of bookmap from the shaded jar file. b.  Remove the Bookmap API from the repository. c.  Updated README to instruct users where to find the latest Bookmap Libraries d.  Added URL for Quick Start Guide on how to use this adapter.

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
 							<goal>shade</goal>
 						</goals>
 						<configuration>
+							<artifactSet>
+								<excludes>
+									<exclude>*:log4j</exclude>
+									<exclude>*:commons-codec</exclude>
+									<exclude>*:gson</exclude>
+									<exclude>*:bm-l1api</exclude>
+								</excludes>
+							</artifactSet>
 							<transformers>
 								<!-- add Main-Class to manifest file -->
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
